--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -137,7 +137,7 @@
                </label>
                </span> 
           <div class="form-group">
-             <button _ngcontent-c4="" class="btn btn-primary ml-2 mr-2" type="submit">Login</button>
+             <button _ngcontent-c4="" class="btn btn-primary  mr-2" type="submit">Login</button>
              <button _ngcontent-c4="" style="    background: #4362a7;
                 border: 1px solid #4362a7;float:right" class="btn btn-secondary"  (click)="signup()" type="button">Signup</button>
           </div>
