--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,7 +88,7 @@
         </button>
       </div>
       <div class="modal-body">
-         <img src="{{selectedImage}}">
+         <img style="width: 100%;"src="{{selectedImage}}">
 
      
       </div>
